--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ body{
     <div class="container">
         <div class="search-box">
             <i class="fa-solid fa-location-dot"></i>
-            <input type="text" placeholder="Enter your location">
+            <input type="text" onfocus="this.value=''" placeholder="Enter your location">
             <button class="fa-solid fa-magnifying-glass"></button>
         </div>
 
