--- a/index.html
+++ b/index.html
@@ -263,13 +263,13 @@ const error404 = document.querySelector('.not-found');
 
 search.addEventListener('click', () => {
 
-    const APIKey = '26146bbfc2ded818401cffd9169302b9';
+    const APIKey = '!!!!!!!!!!!!!!!!';
     const city = document.querySelector('.search-box input').value;
 
     if (city === '')
         return;
 
-    fetch(`https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&appid=${APIKey}`)
+    fetch(`!!!!!!!!!!!!!!!`)
         .then(response => response.json())
         .then(json => {
 
